Fix visibility issue for hider class: ensure display is set to block when visible

--- a/css/style.css
+++ b/css/style.css
@@ -820,6 +820,7 @@ button:hover {
 
   .hider {
     visibility: visible;
+    display: block;
   }
   .hider2 {
     display: none;
